--- a/talk/themes/style/profesh.scss
+++ b/talk/themes/style/profesh.scss
@@ -9,10 +9,12 @@ $wonderland-pink: #f090b1;
 $wonderland-purple: #431236;
 $wonderland-grape: #a22782;
 $wonderland-burgundy: #82002d;
+$wonderland-rouge: #fc0082;
 $pink-white: #ffeef4;
 
 $park-green: #20b3aa;
 $park-mint: #73ebc5;
+$pale-mint: #dbf5f1;
 
 $original-mint: #73ebc5;
 $original-teal: #20b3aa;
@@ -22,10 +24,10 @@ $highlight: $original-teal; // dark green
 $highlightContrast: $original-mint; // light green
 $link: #1CCEFF; //turquoise
 $linkVisited: #0097C0; // dark turq
-$callout: #fc0082; // pink
+$callout: $wonderland-rouge; // pink
 $magenta: #a22782; // plum
 
-$canvas: #dbf5f1;
+$canvas: $pale-mint;
 $canvas_black: $black;
 $grey: #4e6369;
 
@@ -138,6 +140,11 @@ a:hover, a:active {
 }
 
 .slide_goodbye { // final slide
+
+}
+
+h1, h2 {
+	font-weight: normal;
 }
 
 .slide_cover { // Section covers 
@@ -155,9 +162,15 @@ a:hover, a:active {
 }
 
 .slide_interjection { // Section covers 
+	background: $wonderland-purple;
+	color: $pink-white;
+	&.alt {
+		background: darken($wonderland-rouge, 30%);
+	}
 	.statement {
 		font-family: $slab;
 		font-size: 2em;
+		font-weight: normal;
 		padding: .25em;
 	}
 	.small-voice {
@@ -169,15 +182,19 @@ a:hover, a:active {
 			border-top: $wonderland-pink 2px dashed;
 		}
 	}
-	.vcenter.card {
-		background: $wonderland-purple;
-		color: $pink-white;
-		padding: 3em;
-	}
 }
 
 .slide_texty { // text/code slide 
-	.slide-content {
+	background: $pale-mint;
+	.texty-title {
+		border-color: $park-green;
+		font-style: italic;
+	}
+	.texty-body {
+		.footnote {
+			font-size: .75em;
+			font-style: italic;
+		}
 		pre {
 			border-color:$grey;
 			em { color: $callout;}
@@ -231,16 +248,6 @@ a:hover, a:active {
 
 }
 
-.slide-title {
-	font-family: $fancy;
-	font-size: 4em;
-	font-weight: normal;
-	-webkit-transform:none;
-	-moz-transform:none;
-	-ms-transform:none;
-	-o-transform:none;
-	transform:none;
-}
 } // closes .deck-container
 
 // Backgrounds for slides
@@ -306,5 +313,10 @@ a:hover, a:active {
 
 #storyboard {
 	background: url(../../img/topic_storyboard.jpg) no-repeat  0 25%;
+	background-size: cover;
+}
+
+#cover_retina {
+	background: url(../../img/cover_retina.png) no-repeat  0 0;
 	background-size: cover;
 }
