--- a/talk/themes/style/profesh.css
+++ b/talk/themes/style/profesh.css
@@ -32,7 +32,7 @@
     color: #00232b;
     background: #20b3aa;
     border: 0; }
-  .deck-container .slide .deck-status {
+  .deck-container .deck-status {
     color: #00232b;
     opacity: .5;
     font-size: 0.6666em; }
@@ -126,6 +126,50 @@
       width: 60.6666667%; }
   .deck-container .slide_about img {
     margin-top: 1em; }
+  .deck-container #slide_goodbye {
+    color: #4f001b;
+    background: #ffeef4; }
+    .deck-container #slide_goodbye .texty-title {
+      font-family: "blue-goblet-alt", fancy;
+      border: 0; }
+    .deck-container #slide_goodbye a {
+      border-bottom: 2px dotted #a22782;
+      padding: 1px 1px 0 1px;
+      text-decoration: none; }
+    .deck-container #slide_goodbye a:link {
+      color: #a22782; }
+    .deck-container #slide_goodbye a:visited {
+      border-color: #a22782;
+      color: #a22782; }
+    .deck-container #slide_goodbye a:hover, .deck-container #slide_goodbye a:active {
+      background: none;
+      color: #fc0082;
+      border: 0; }
+    .deck-container #slide_goodbye.deck-current .img-wrap {
+      opacity: 1; }
+    .deck-container #slide_goodbye .img-wrap {
+      background: #f090b1;
+      border-radius: 50%;
+      display: block;
+      opacity: .3;
+      position: absolute;
+      right: -10%;
+      bottom: -10%;
+      overflow: hidden;
+      width: 100vh;
+      padding-top: 100vh; }
+      .deck-container #slide_goodbye .img-wrap img {
+        -moz-transform: scaleX(-1);
+        -o-transform: scaleX(-1);
+        -webkit-transform: scaleX(-1);
+        transform: scaleX(-1);
+        filter: FlipH;
+        -ms-filter: "FlipH";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: auto; }
   .deck-container h1, .deck-container h2 {
     font-weight: normal; }
   .deck-container .slide_cover .section-title {
