adding and removing scene-transitioning class from interactions so people can't scroll or highlight links during scene transitions. Yay better UX/performance(maybe).

--- a/book/css/style.css
+++ b/book/css/style.css
@@ -106,6 +106,17 @@
     clear: both;
   }
 
+  /* line 35, ../scss/_extends.scss */
+  .scene-transitioning,
+  .scene-transitioning * {
+    pointer-events: none !important;
+  }
+
+  /* line 39, ../scss/_extends.scss */
+  .scene-transitioning {
+    overflow: hidden;
+  }
+
   /* line 1, ../scss/_foundation.scss */
   html, body {
     background: #000;
