Improves swiping by stopping looking for events during the process. Need to unlock the links still, somehow.

--- a/book/scss/_extends.scss
+++ b/book/scss/_extends.scss
@@ -31,6 +31,7 @@
     clear: both;
 }
 
+// http://www.thecssninja.com/javascript/pointer-events-60fps
 %disable-hover,
 %disable-hover * {
   pointer-events: none !important;
