--- a/book/scss/_variables.scss
+++ b/book/scss/_variables.scss
@@ -9,7 +9,7 @@ $min-width: 800;
 $min-height: 600;
 
 // Media Queries and size ratios
-$breakpoint-short: (min-aspect-ratio "4/3");
+$breakpoint-short: (min-aspect-ratio "4/3"), (orientation landscape);
 $breakpoint-not-narrow: (525/16*1em);
 $breakpoint-narrow: (max-width 525/16*1em);
 
