--- a/book/scss/scenes/_cut.scss
+++ b/book/scss/scenes/_cut.scss
@@ -1,7 +1,7 @@
 // Cut
 .scene-cut { 
 	background: #000;
-	height: 100%; width: 100%;
+	height: 100%; width: 100% !important;
 	position: fixed;
 	top: 0; left: 0;
 	@include transition(opacity 2s ease-out 2s);
