--- a/book/css/style.css
+++ b/book/css/style.css
@@ -1020,8 +1020,17 @@ h1 {
 }
 
 /* line 4, ../scss/scenes/tunnels/_tunnels.scss */
+.scene-hole {
+  background: url('../img/bg-tunnel-border-left.svg?1378751783') 0 0 repeat-y, url('../img/bg-tunnel-border-right.svg?1378751720') 100% 0 repeat-y, #6c373f;
+  -webkit-background-size: 4.88281% auto, 4.88281% auto;
+  -moz-background-size: 4.88281% auto, 4.88281% auto;
+  -o-background-size: 4.88281% auto, 4.88281% auto;
+  background-size: 4.88281% auto, 4.88281% auto;
+}
+
+/* line 14, ../scss/scenes/tunnels/_tunnels.scss */
 .scene .page_tunnels {
-  background: url('../img/tunnels.svg?1379668445') no-repeat, url('../img/bg_tunnel-specks.png?1374696235') repeat, #6c373f;
+  background: url('../img/tunnels.svg?1379668445') no-repeat, url('../img/bg_tunnel-specks.png?1374696235') repeat;
   -webkit-background-size: 100% auto, auto auto;
   -moz-background-size: 100% auto, auto auto;
   -o-background-size: 100% auto, auto auto;
@@ -1029,12 +1038,12 @@ h1 {
   padding-top: 48.82813%;
 }
 
-/* line 17, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 26, ../scss/scenes/tunnels/_tunnels.scss */
 #tunnel {
   position: relative;
   z-index: 0;
 }
-/* line 20, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 29, ../scss/scenes/tunnels/_tunnels.scss */
 #tunnel .page {
   background: url('../img/bg-tunnel-border-left.svg?1378751783') 0 0 repeat-y, url('../img/bg-tunnel-border-right.svg?1378751720') 100% 0 repeat-y, url('../img/bg_tunnel-furniture.svg?1379267001') center 0 no-repeat, url('../img/bg_tunnel-specks.png?1374696235') repeat, #6c373f;
   -webkit-background-size: 4.88281% auto, 4.88281% auto, 87.89063% auto, auto auto;
@@ -1044,37 +1053,37 @@ h1 {
   padding-top: 161%;
 }
 
-/* line 37, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 46, ../scss/scenes/tunnels/_tunnels.scss */
 .page_falling {
   z-index: -1;
 }
 
-/* line 39, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 48, ../scss/scenes/tunnels/_tunnels.scss */
 .curious .alice-falling {
   background-position: 0 16.66667%;
 }
 
-/* line 43, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 52, ../scss/scenes/tunnels/_tunnels.scss */
 .bored .alice-falling {
   background-position: 0 83.33333%;
 }
 
-/* line 47, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 56, ../scss/scenes/tunnels/_tunnels.scss */
 .sleeping .alice-falling {
   background-position: 0 66.66667%;
 }
 
-/* line 51, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 60, ../scss/scenes/tunnels/_tunnels.scss */
 .waking .alice-falling {
   background-position: 0 100%;
 }
 
-/* line 55, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 64, ../scss/scenes/tunnels/_tunnels.scss */
 .weird .alice-falling {
   background-position: 0 0;
 }
 
-/* line 59, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 68, ../scss/scenes/tunnels/_tunnels.scss */
 .jolted .alice-falling {
   background-position: 0 50%;
 }
@@ -1132,7 +1141,7 @@ h1 {
   }
 }
 
-/* line 68, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 77, ../scss/scenes/tunnels/_tunnels.scss */
 .alice-falling {
   background-position: 0 33.33333%;
   -webkit-background-size: 100% auto;
@@ -1150,7 +1159,7 @@ h1 {
   z-index: 1;
 }
 
-/* line 78, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 87, ../scss/scenes/tunnels/_tunnels.scss */
 .frightened .alice-falling {
   height: 998px;
   width: 640px;
@@ -1164,13 +1173,13 @@ h1 {
   background-size: 100% auto;
 }
 
-/* line 83, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 92, ../scss/scenes/tunnels/_tunnels.scss */
 .sticky-wrapper {
   position: absolute;
   width: 100%;
 }
 
-/* line 88, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 97, ../scss/scenes/tunnels/_tunnels.scss */
 .stuck.alice-falling {
   position: fixed;
   top: 0;
