--- a/book/scss/style.scss
+++ b/book/scss/style.scss
@@ -1,3 +1,4 @@
+@media screen {
 	@import "compass/css3/"; // css3 helpers
 	// animation helpers w/ Animation Studio
 	@import "animation-studio"; 
@@ -21,6 +22,6 @@
 
 	// Scenes
 	@import "scenes/scenes";
-
+}
 // Print styles
 @import "print";
