--- a/book/scss/style.scss
+++ b/book/scss/style.scss
@@ -1,11 +1,12 @@
+@import "compass/support";
+@import "compass/css3/"; // css3 helpers
+// animation helpers w/ Animation Studio
+@import "animation-studio"; 
+
+// media queries w/ Breakpoint
+@import "breakpoint";
+
 @media screen {
-	@import "compass/css3/"; // css3 helpers
-	// animation helpers w/ Animation Studio
-	@import "animation-studio"; 
-
-	// media queries w/ Breakpoint
-	@import "breakpoint";
-
 	// Import reset to blow away all styles ever. Don't need them.
 	@import "compass/reset";
 
